Fixed Image max-width alignment in all pages
Changed `.align-max` to `.image-max-width` and removed divs

--- a/_sass/esi/_general.scss
+++ b/_sass/esi/_general.scss
@@ -2,3 +2,7 @@
   list-style: none;
   padding-left: 0px;
 }
+
+.image-max-width {
+    max-width: 100%;
+}
