--- a/css/main.scss
+++ b/css/main.scss
@@ -96,10 +96,6 @@ main {
   justify-content: center;
 }
 
-.align-max {
-  max-width: 100%;
-}
-
 .image-padding {
   padding: 10px;
 }
